first slide test

--- a/index.html
+++ b/index.html
@@ -1774,6 +1774,13 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <ul>
 <li><p><strong>Distribución y abundancia</strong> de una especie siempre resultan afectados por otras especies.</p></li>
 <li><p>Debido a las interacciones entre organismos, normalmente las distribuciones de especies suelen ser <strong>mutuamente excluyentes a escala local</strong>, o tienden a ocurrir de forma conjunta en complejas comunidades ecológicas.</p></li>
+<li><p>Las comunidades vistas como un superorganismo se atribuye a <strong>Clements</strong> (especies como células).</p></li>
+<li><p>En contraste, la comunidad vista como unida discreta e integrada, se atribuye a <strong>Gleason</strong>.</p></li>
+<li>Ambas corrientes hicieron aportes relevantes.
+<ul>
+<li>Las comunidades exhiben atributos como los de un individuo (“productividad primaria total”).</li>
+<li>Por otra parte</li>
+</ul></li>
 </ul>
 </section>
     </div>
