--- a/index.html
+++ b/index.html
@@ -1776,12 +1776,31 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><p>Debido a las interacciones entre organismos, normalmente las distribuciones de especies suelen ser <strong>mutuamente excluyentes a escala local</strong>, o tienden a ocurrir de forma conjunta en complejas comunidades ecológicas.</p></li>
 <li><p>Las comunidades vistas como un superorganismo se atribuye a <strong>Clements</strong> (especies como células).</p></li>
 <li><p>En contraste, la comunidad vista como unida discreta e integrada, se atribuye a <strong>Gleason</strong>.</p></li>
+</ul>
+</section>
+<section id="introduccion-cont." class="slide level2">
+<h2>Introducción (cont.)</h2>
+<ul>
 <li>Ambas corrientes hicieron aportes relevantes.
 <ul>
-<li>Las comunidades exhiben atributos como los de un individuo (“productividad primaria total”).</li>
-<li>Por otra parte</li>
+<li><p>Las comunidades exhiben <strong>atributos como los de un individuo</strong> (“productividad primaria total”).</p></li>
+<li><p>Por otra parte, las especies también varían en “ocurrencia” y abundancia <strong>como si fuesen organismos indpendientes</strong> unos de otros.</p></li>
 </ul></li>
+<li><p>Climas diferentes inducen tipos de <strong>vegetación distintos</strong> (zonas de vida, biomas, ecorregiones).</p></li>
+<li><p>Ejemplo: …</p></li>
 </ul>
+</section>
+<section id="introduccion-cont.-1" class="slide level2">
+<h2>Introducción (cont.)</h2>
+</section>
+<section id="comunidades-y-ecosistemas" class="slide level2">
+<h2>Comunidades y ecosistemas</h2>
+<ul>
+<li>Je je, tremendo lío, definiciones arbitrarias.</li>
+</ul>
+</section>
+<section id="referencias" class="slide level2">
+<h2>Referencias</h2>
 </section>
     </div>
   </div>
