bib and csl files added, community and ecosystem texts added

--- a/index.html
+++ b/index.html
@@ -1788,19 +1788,37 @@ document.getElementsByTagName('head')[0].appendChild(style);
 </ul></li>
 <li><p>Climas diferentes inducen tipos de <strong>vegetación distintos</strong> (zonas de vida, biomas, ecorregiones).</p></li>
 <li><p>Ejemplo: …</p></li>
+<li><p>Consultar mapas modelos idealizados, pags. 15 y 39 de <span class="citation" data-cites="bailey2014ecoregions">Bailey (2014)</span>.</p></li>
 </ul>
-</section>
-<section id="introduccion-cont.-1" class="slide level2">
-<h2>Introducción (cont.)</h2>
 </section>
 <section id="comunidades-y-ecosistemas" class="slide level2">
 <h2>Comunidades y ecosistemas</h2>
 <ul>
-<li>Je je, tremendo lío, definiciones arbitrarias.</li>
+<li><p>Je je, tremendo lío, definiciones arbitrarias.</p></li>
+<li><p>Las comunidades y los ecosistemas son los niveles de organización biótica y ecológica más altos, pero comúnmente se deifnen de forma arbitraria.</p></li>
 </ul>
 </section>
-<section id="referencias" class="slide level2">
+<section id="comunidades-y-ecosistemas-cont." class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="comunidad">Comunidad</h3>
+<ul>
+<li><p>La comunidad consiste en el <strong>conjunto de especies que viven en el mismo lugar</strong>.</p></li>
+<li><p>Un miembro de la comunidad puede definirse <strong>taxonómicamente</strong> o por medio de atributos/rasgos <strong>funcionales</strong> (e.g. formas de vida, dieta).</p></li>
+<li><p>Dos atributos son recurrentemente estudiados en la comunidad: <strong>estructura</strong> (atributos estáticos) y <strong>funciones</strong> (atributos dinámicos).</p></li>
+<li><p>Los límites se establecen arbitrariamente.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-1" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="ecosistemas">Ecosistemas</h3>
+</section>
+<section id="referencias" class="slide level2 unnumbered">
 <h2>Referencias</h2>
+<div id="refs" class="references">
+<div id="ref-bailey2014ecoregions">
+<p>Bailey, R. G. (2014). Ecoregions of the continents: The polar ecoregions. In <em>Ecoregions</em> (pp. 47–54). Springer.</p>
+</div>
+</div>
 </section>
     </div>
   </div>
