--- a/index.html
+++ b/index.html
@@ -1794,8 +1794,8 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <section id="comunidades-y-ecosistemas" class="slide level2">
 <h2>Comunidades y ecosistemas</h2>
 <ul>
-<li><p>Je je, tremendo lío, definiciones arbitrarias.</p></li>
-<li><p>Las comunidades y los ecosistemas son los niveles de organización biótica y ecológica más altos, pero comúnmente se deifnen de forma arbitraria.</p></li>
+<li><p>Je je, <strong>tremendo lío</strong>, definiciones arbitrarias.</p></li>
+<li><p>Las comunidades y los ecosistemas son los niveles de organización biótica y ecológica <strong>más altos</strong>, pero comúnmente se deifnen de forma arbitraria.</p></li>
 </ul>
 </section>
 <section id="comunidades-y-ecosistemas-cont." class="slide level2">
@@ -1805,18 +1805,34 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <li><p>La comunidad consiste en el <strong>conjunto de especies que viven en el mismo lugar</strong>.</p></li>
 <li><p>Un miembro de la comunidad puede definirse <strong>taxonómicamente</strong> o por medio de atributos/rasgos <strong>funcionales</strong> (e.g. formas de vida, dieta).</p></li>
 <li><p>Dos atributos son recurrentemente estudiados en la comunidad: <strong>estructura</strong> (atributos estáticos) y <strong>funciones</strong> (atributos dinámicos).</p></li>
-<li><p>Los límites se establecen arbitrariamente.</p></li>
+<li><p>Los límites se establecen <strong>arbitrariamente</strong>, aunque los <strong>rasgos topográficos</strong> son usados también.</p></li>
 </ul>
 </section>
 <section id="comunidades-y-ecosistemas-cont.-1" class="slide level2">
 <h2>Comunidades y ecosistemas (cont.)</h2>
 <h3 id="ecosistemas">Ecosistemas</h3>
+<ul>
+<li><p>Incluye no sólo las especies que habitan en el lugar, sino también los <strong>rasgos/atributos/características físicas</strong> del mismo, así como las interacciones entre los componentes bióticos y abióticos del sistema.</p></li>
+<li><p><strong>Los ecosistemas no están aislados</strong>, aunque lo parezcan. El ecosistema más grande y aislado del resto es la biosfera, pero dentro de ella, es difícil separar subunidades que se consideren absolutamente aisladas.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-2" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas">Consideraciones energéticas</h3>
+<ul>
+<li><p>Cada especie tiene un nicho, y el cómo se organizan para dar lugar a asociaciones complejas entre poblaciones es el objetivo último de la ecología.</p></li>
+<li><p>Dos rasgos son fundamentales de las especies que influyen en la comunidad son su <strong>masa/volumen corporal</strong> y su <strong>condición trófica</strong>.</p></li>
+<li><p>A <strong>mayor tamaño/masa, mayor consumo</strong> energético. La tasa de metabolismo basal es clave (<span class="math inline">\(m=cM^{0.75}\)</span>). Hay más especies de animales pequeños, y son igualmente más abundantes, que grandes. Ver figuras 5.2 y 5.3, páginas 125 y 126 de <span class="citation" data-cites="lomolino2006biogeography">Lomolino, Riddle, Brown, &amp; Brown (2006)</span>.</p></li>
+</ul>
 </section>
 <section id="referencias" class="slide level2 unnumbered">
 <h2>Referencias</h2>
 <div id="refs" class="references">
 <div id="ref-bailey2014ecoregions">
 <p>Bailey, R. G. (2014). Ecoregions of the continents: The polar ecoregions. In <em>Ecoregions</em> (pp. 47–54). Springer.</p>
+</div>
+<div id="ref-lomolino2006biogeography">
+<p>Lomolino, M. V., Riddle, B. R., Brown, J. H., &amp; Brown, J. H. (2006). <em>Biogeography</em>. Sinauer Associates Sunderland, MA.</p>
 </div>
 </div>
 </section>
