--- a/index.html
+++ b/index.html
@@ -1821,8 +1821,73 @@ document.getElementsByTagName('head')[0].appendChild(style);
 <h3 id="consideraciones-energeticas">Consideraciones energéticas</h3>
 <ul>
 <li><p>Cada especie tiene un nicho, y el cómo se organizan para dar lugar a asociaciones complejas entre poblaciones es el objetivo último de la ecología.</p></li>
-<li><p>Dos rasgos son fundamentales de las especies que influyen en la comunidad son su <strong>masa/volumen corporal</strong> y su <strong>condición trófica</strong>.</p></li>
-<li><p>A <strong>mayor tamaño/masa, mayor consumo</strong> energético. La tasa de metabolismo basal es clave (<span class="math inline">\(m=cM^{0.75}\)</span>). Hay más especies de animales pequeños, y son igualmente más abundantes, que grandes. Ver figuras 5.2 y 5.3, páginas 125 y 126 de <span class="citation" data-cites="lomolino2006biogeography">Lomolino, Riddle, Brown, &amp; Brown (2006)</span>.</p></li>
+<li><p>Dos rasgos son fundamentales de las especies que influyen en la comunidad son su <strong>masa/volumen corporal</strong> y su <strong>estado trófico o condición trófica</strong>.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-3" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.">Consideraciones energéticas (cont.)</h3>
+<h4 id="masa-corporal">Masa corporal</h4>
+<ul>
+<li><p>Su influencia sobre el ecosistema es significativamente alta.</p></li>
+<li><p>A <strong>mayor tamaño/masa, mayor consumo</strong> energético. La tasa de metabolismo basal es clave (<span class="math inline">\(m=cM^{0.75}\)</span>).</p></li>
+<li><p>Hay más especies de animales pequeños, y son igualmente más abundantes, que grandes.</p></li>
+<li><p>Las <strong>especies grandes</strong> (al menos en animales), tienden a tener <strong>ámbitos geográficos amplios</strong>.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-4" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-1">Consideraciones energéticas (cont.)</h3>
+<h4 id="masa-corporal-1">Masa corporal</h4>
+<ul>
+<li><p>La <strong>capacidad de carga</strong> del ambiente es limitada, por lo que los animales grandes tienden a aumente su rango para compensar esta limitación.</p></li>
+<li><p>Ver figuras 5.2 y 5.3, páginas 125 y 126 de <span class="citation" data-cites="lomolino2006biogeography">Lomolino, Riddle, Brown, &amp; Brown (2006)</span>.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-5" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-2">Consideraciones energéticas (cont.)</h3>
+<h4 id="estado-trofico">Estado trófico</h4>
+<ul>
+<li><p>Se refiere a <strong>cómo los organismos adquieren su energía</strong>, y es el otro rasgo que influye significativamente en la comunidad.</p></li>
+<li><p>El tamaño corporal tiene efecto sobre el estado trófico. Los <strong>depredadores suelen ser más grandes que su presa</strong>, a menos que la especie realice caza en manadas.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-6" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-3">Consideraciones energéticas (cont.)</h3>
+<h4 id="estado-trofico-1">Estado trófico</h4>
+<ul>
+<li><p>Los organismos obtienen <strong>su energía del sol</strong> (salvo contadas excepciones).</p></li>
+<li><p>Las plantas, autótrofos, producen <strong>compuestos orgánicos a partir de radiación solar</strong>, dióxido de carbono, minerales y agua.</p></li>
+<li><p>Además de usarlo en su metabolismo, las plantas producen estos compuestos para otros organismos que se alimentan de ellos, y otros organismos se alimentan de estos últimos.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-7" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-4">Consideraciones energéticas (cont.)</h3>
+<h4 id="estado-trofico-2">Estado trófico</h4>
+<ul>
+<li><p>El diseño de trayectorias unidireccionales de la energía que fluye entre especies y a través de comunidades se denominan <strong>cadenas tróficas</strong>. Los nodos de la misma se denominan <strong>niveles tróficos</strong>.</p></li>
+<li><p>El primer nivel contiene plantas, o <strong>productores primarios</strong>. El segundo contiene herbívoros, o <strong>consumidores primarios</strong>. El tercero <strong>carnívoros</strong> o consumidores, y así sucesivamente. Al final de las cadenas están los <strong>descomponedores o detritívoros</strong>.</p></li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-8" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-5">Consideraciones energéticas (cont.)</h3>
+<h4 id="estado-trofico-3">Estado trófico</h4>
+<ul>
+<li>Aunque la <strong>energía fluye linealmente</strong>, los trayectos que sigue la energía son muy variados. Un consumidor se alimenta comúnmnente de <strong>varias especies</strong>, y varios <strong>descomponedores lo consumirán</strong>, formando una red trófica (distintas cadenas interconectadas; ver figura 5.5, página 127 de <span class="citation" data-cites="lomolino2006biogeography">Lomolino et al. (2006)</span>).</li>
+<li>La energía fluye a través de las comunidades siguiendo la <strong>primera</strong> (la energía ni se crea ni se destruye) y la <strong>segunda ley de la termodinámica</strong> (a mayor conversión de la energía, menor su capacidad de producir trabajo, su caos/entropía aumenta).</li>
+</ul>
+</section>
+<section id="comunidades-y-ecosistemas-cont.-9" class="slide level2">
+<h2>Comunidades y ecosistemas (cont.)</h2>
+<h3 id="consideraciones-energeticas-cont.-6">Consideraciones energéticas (cont.)</h3>
+<h4 id="estado-trofico-4">Estado trófico</h4>
+<ul>
+<li><p>Pirámides de flujo energético. Estados tróficos más altos disponen de menor cantidad de energía.</p></li>
+<li><p>Capacidad de carga: energía utilizable. La capacidad de carga de un área para estados tróficos altos es baja.</p></li>
 </ul>
 </section>
 <section id="referencias" class="slide level2 unnumbered">
